Adding a bunch of UI, supporting the takeOrGrand stage

--- a/Tichu/index.html
+++ b/Tichu/index.html
@@ -1,5 +1,6 @@
 ﻿<body>
     <div id="root"></div>
+    <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="styles/tichu.css" />
     <!-- scripts -->
     <script src="./dist/app-bundle.js"></script>
