Improving CSS a bit, adding responsive styles

--- a/Tichu/index.html
+++ b/Tichu/index.html
@@ -1,7 +1,10 @@
 ﻿<body>
     <div id="root"></div>
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="styles/tichu.css" />
+    <link rel="stylesheet" type="text/css" href="styles/general.css" />
+    <link rel="stylesheet" media="only screen and (min-width:1200px)" type="text/css" href="styles/tichu.css" />
+    <link rel="stylesheet" media="only screen and (min-width:784px) and (max-width:1199px)" type="text/css" href="styles/tichuM.css" />
+    <link rel="stylesheet" media="only screen and (min-width:400px) and (max-width:783px)" type="text/css" href="styles/tichuSM.css" />
     <!-- scripts -->
     <script src="./dist/app-bundle.js"></script>
 </body>
